# wow_auctions

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  RELEASE.md  SUPPORT.md  mypi.ini  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  run.py  testing.txt  wow_auctions.sublime-workspace
.github/: CODEOWNERS  pr-labeler.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
config/: general_settings.yaml  items.yaml  user_items.yaml  user_settings.yaml
data/_test/raw/: arkinventory_data.json  bb_data.json  beancounter_data.json
data/_test/reporting/: item_reporting.json
data/config/: user_settings.yaml
data/static/: items.csv
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/_autosummary/: pricer.sources.rst  pricer.testing.rst  pricer.utils.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/.doctrees/autoapi/pricer/: index.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/_sources/autoapi/pricer/: index.rst.txt
docs/_build/autoapi/: index.html
docs/_build/autoapi/pricer/: index.html
docs/_build/autoapi/pricer/analysis/: index.html
docs/_build/autoapi/pricer/sources/: index.html
docs/_build/autoapi/pricer/testing/: index.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/_autosummary/: pricer.analysis.doctree  pricer.config.doctree  pricer.doctree  pricer.sources.doctree  pricer.testing.doctree  pricer.utils.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/pricer/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_autosummary/: pricer.analysis.html  pricer.config.html  pricer.html  pricer.sources.html  pricer.testing.html  pricer.utils.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/_autosummary/: pricer.analysis.rst.txt  pricer.config.rst.txt  pricer.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/pricer/: index.html
pricer/: __init__.py  analysis.py  config.py  sources.py  testing.py  utils.py
pricer_addon/: deploy_to_wow.sh
pricer_addon/Pricer/: Pricer.lua  Pricer.toc  items_of_interest.lua
src/pricer/: __init__.py  analysis.py  campaign.py  config.py  install.py  io.py  logs.py  reporting.py  run.py  schema.py  sources.py  utils.py  views.py
src/pricer/config/: user_items.yaml  user_settings.yaml
src/pricer/data/: servers.csv
src/pricer/static/: style.css
src/pricer/templates/: home.html  item_reporting.html
src/pricer/webserver/: __init__.py  views.py
src/pricer/webserver/static/: scripts.js
src/pricer/webserver/templates/: articles.html  home.html  index.html  item_reporting.html  template.html
tests/: conftest.py  test_analysis.py  test_e2e.py  test_sources.py  test_utils.py
tests/test_data/: test_dot_pricer.json  user_items.json
tests/test_data/raw/: aucscan_data.json  bb_data.json
(+19 files in other folders)
