[tool.poetry]
name = "pricer"
version = "0.1.1"
description = "Use WoW addon data to optimize auction buying and selling policies"
authors = ["bluemania <damnthatswack@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bluemania/wow_auctions"

[tool.poetry.dependencies]
python = "^3.7"
click = "6.7"
fastparquet = "0.3.3"
pandas = "1.0.1"
pre-commit = "2.6.0"
PyYAML = "5.2"
seaborn = "0.9.0"
SLPP = "1.2"
sphinx = "^3.1.2"
sphinx-autoapi = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
