[tool.poetry]
name = "pricer"
version = "0.1.1"
description = "Use WoW addon data to optimize auction buying and selling policies"
authors = ["bluemania <damnthatswack@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bluemania/wow_auctions"

[tool.poetry.dependencies]
python = "^3.7"
click = "6.7"
fastparquet = "0.3.3"
pandas = "1.0.1"
PyYAML = "5.2"
seaborn = "0.9.0"
SLPP = "1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
pydocstyle = "^5.0.2"
pytest = "^5.4.3"
coverage = "^5.2.1"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
flake8-isort = "^3.0.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
sphinx = "^3.1.2"
sphinx-autoapi = "^1.4.0"
pre-commit = "^2.6.0"
darglint = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
