[tool.poetry]
name = "pricer"
version = "0.4.1"
description = "Use WoW addon data to optimize auction buying and selling policies"
authors = ["bluemania <damnthatswack@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bluemania/wow_auctions"
documentation = "https://pricer.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.7"
click = "6.7"
fastparquet = "0.3.3"
pandas = "1.0.1"
PyYAML = "5.2"
seaborn = "0.9.0"
SLPP = "1.2"
importlib_metadata = "^1.7.0"
deepdiff = "^5.0.2"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.1"
sklearn = "^0.0"
tqdm = "^4.49.0"
pandera = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
codecov = "^2.1.8"
coverage = {extras = ["toml"], version = "^5.2.1"}
darglint = "^1.5.2"
flake8 = "^3.8.3"
flake8-annotations = "^2.3.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.782"
pre-commit = "^2.6.0"
pyan = {git = "https://github.com/jdb78/pyan.git"}
pydocstyle = "^5.0.2"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
pytest-sugar = "^0.9.4"
safety = "^1.9.0"
sphinx = "^3.1.2"
sphinx-autodoc-typehints = "^1.11.0"
typeguard = "^2.9.1"
xdoctest = "^0.13.0"
jupyter = "^1.0.0"
m2r2 = "^0.2.5"

[tool.poetry.scripts]
pricer = "pricer.run:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pricer"]

[tool.coverage.report]
show_missing = true
fail_under = 0
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
